SDK-1181 create profiles and use them in scenarios, separate scenario… (#50)